fix some layout bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,11 @@ a:visited {
   font-size: 38px;
   line-height: 1.2;
 }
+
+.is-title{
+  font-size: 2.4rem;
+  margin: 0;
+}
 .grid-container {
   display: grid;
   /* grid-template-columns: 1fr 1fr; 创建两列网格，每列各占 50% */
@@ -233,3 +238,74 @@ box-sizing: border-box;
   width: 80%;
   margin: 10px;
 }
+
+.project-container{
+  display: flex;
+  align-items: center;
+  background-color: #a4e2c6;
+  padding: 20px;
+  /* max-width: 600px;
+  min-width: 550px; */
+  min-height: 500px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  flex-direction: row;
+}
+
+.container1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 50px;
+}
+
+.image-section1 {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-section1 img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px; /* Optional: Adds rounded corners */
+}
+
+.text-section1 {
+  flex: 1;
+  max-width: 500px;
+}
+
+.text-section1 h1 {
+  color: #012696; /* Matches the blue text color */
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.text-section1 p {
+  font-size: 1rem;
+  color: #333; /* Darker text for contrast */
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.learn-more-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  border: 2px solid #012696;
+  color: #012696;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.learn-more-btn:hover {
+  background-color: #012696;
+  color: #fff;
+}
+
